# magick_glfw

./: CMakeLists.txt  README.md  main.cpp
engine/: config.cpp  config.h  core.cpp  core.h  input.cpp  input.h  input_defs.h
game/: game.cpp  game.h
